fix: enhance layout of download items with gap and wrap adjustments

--- a/style.css
+++ b/style.css
@@ -64,8 +64,10 @@ main .download-container {
 
 .download-container .download-item {
   display: flex;
+  gap: 12px 0;
   align-content: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 main .point:nth-of-type(even) {
